# ignis

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  configs  eslint.config.mjs  package.json  scripts  src  tsconfig.json
.githooks/: pre-commit
.github/scripts/: test-release.ts
.github/workflows/: deploy-docs.yml  package-release.yml
docs/: FEATURE_TEMPLATE.md  README.md  index.md
docs/.vitepress/: config.mts
docs/core-concepts/: application.md  components.md  dependency-injection.md  services-and-repositories.md
docs/features/: authentication.md  health-check.md  request-tracker.md  socket-io.md  swagger.md
docs/get-started/: creating-a-new-project.md  philosophy.md  quickstart.md
docs/guides/: creating-a-new-project.md  setting-up-project.md  testing.md
examples/5-mins-qs/: .prettierrc.mjs  eslint.config.mjs  package.json  tsconfig.json
examples/rpc-api-server/: docker-compose.yml  package.json  tsconfig.json
examples/rpc-client-app/: .env.example  README.md  package.json  schema.d.ts  tsconfig.app.json  vite.config.ts
examples/socket-io-test/: .env.example  .prettierignore  .prettierrc.mjs  client.ts  eslint.config.mjs  package.json
rs/rs-infra/: Cargo.toml
rs/rs-infra-test/: Cargo.toml  rustfml.toml
rs/rs-infra-test/src/: main.rs
rs/rs-infra/helpers/: Cargo.toml  README.md
rs/rs-infra/helpers/src/: error.rs  fetcher.rs  network.rs
rs/rs-infra/helpers/src/network/: fetcher.rs  network_request.rs
rs/rs-infra/helpers/src/network/fetcher/: base_fetcher.rs
rs/rs-infra/src/: lib.rs
(+225 files in other folders)
