[package]
name = "rs_infra"
version = "0.1.0"
edition = "2024"


[workspace]
members = [
  "helpers",
]

[lib]
name = "rs_infra"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true

[workspace.dependencies]
async-trait = "0.1.89"
reqwest = { version = "0.12.26", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }

[dependencies]
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
rs_infra_helpers = { path = "./helpers" }